# sports-sponsorship-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  develop.yml  main.yml  pre-merge.yml
src/sponsoring/: cli.py  logging_config.py
src/sponsoring/pipeline_analyze/: analyze.py  avg_by_country.py  avg_by_industry.py  avg_by_industry_and_league.py  deals_by_industry_and_country.py  filter.py  group.py  load.py  summary.py  usd_by_industry_and_country.py
src/sponsoring/pipeline_build/: build.py  load.py  merge.py  transform.py  transformations.py
