[project]
name = "sponsoring"
version = "1.0.0"
requires-python = ">=3.13"
description = "Automation of the data pipelines for sponsoring dataframes at Sevilla FC"
authors = [{ name = "Adrian-Garcia-Ruiz", email = "adriangr591@gmail.com" }]

[project.scripts]
sponsoring = "sponsoring.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = ">=3.11"
jupyter = "*"
ipykernel = "*"
typer = "*"
rich = "*"
azure-storage-blob = "*"
pandas = "*"
pyarrow = "*"
regex = "*"
scikit-learn = "*"
sentence-transformers = "*"
datasets = ">=2.20.0"
HDBSCAN = "*"
matplotlib = "*"


[tool.pixi.pypi-dependencies]
pip = "*"
sponsoring = { path = ".", editable = true }


[tool.ruff]
line-length = 90


[tool.pixi.tasks]
build   = "python -m sponsoring build"
analyze = "python -m sponsoring analyze"